# bgzip

./: .gitignore  CMakeLists.txt
include/: zipreader.hpp
src/: main.cpp  zipreader.cpp
